AP-13737: Add an option to save the file in the workflow folder
AP-13737 (File upload (widget) should provide flow variable with knime:// URL)